# webtesttool

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  APP_CALISIR_HALE_GELDI.md  ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  BURADAN_BASLA.md  CHANGELOG.md  CODE_QUALITY.md  CONTRIBUTING.md  DESKTOP_APP_BUILD.md  DESKTOP_APP_FINAL.md  DESKTOP_APP_GUIDE.md  Dockerfile  FINAL_REPORT_10_10.md  HIZLI_BASLANGIC_YENI_OZELLIKLER.md  HIZLI_REFERANS.md  LICENSE  MONITOR_SAYFA_DUZELTILDI.md  Makefile  README.md  SECURITY.md  SISTEM_KULLANIM_REHBERI.md  SISTEM_TAMAMEN_YENILENDI.md  SON_DUZELTMELER.md  SORUNLAR_COZULDU.md  TAMAMLANAN_DESKTOP_APP.md  TAMAMLANAN_IYILESTIRMELER_2025.md  YENI_SISTEM_ORGANIZASYONU.md  app.py  app_temp.py  bandit_results.json  build_desktop.bat  build_desktop.sh  build_installer.bat  docker-compose.yml  gelecektebelki.md  guvenlik_taramasi.bat  (+29 more)
.claude/: settings.local.json
.github/workflows/: build-desktop.yml  lint.yml  release.yml  security.yml  test.yml  tests.yml
api/: health.py
archive/: ADVANCED_FEATURES.md  BASLAMAK_ICIN.md  FINAL_TAMAMLANAN_IYILESTIRMELER.md  HIZLI_BASLANGIC.md  KAPSAMLI_GELISTIRME_PLANI.md  KAPSAMLI_IYILESTIRMELER_TAMAMLANDI.md  NASIL_KULLANILIR.md  OPTIMIZASYON_TAMAMLANDI.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SISTEM_IYILESTIRME_RAPORU_2025.md  SISTEM_OPTIMIZASYON_RAPORU.md  USAGE_GUIDE.md  UYGULAMA_PLANI.md  YENI_OZELLIKLER_KULLANIM.md
cli/: interactive.py  login_cli.py  login_dialog.py
config/: default_config.yaml
config/environments/: development.yaml  production.yaml
config/templates/: README.md  api.yaml  compliance.yaml  ecommerce.yaml  full.yaml  quick.yaml  wordpress.yaml
core/: __init__.py  auth_manager.py  caching.py  config.py  engine.py  error_handler.py  exceptions.py  login_automation.py  models.py  module_loader.py  notifications.py  notifier.py  plugins.py  progress.py  rate_limiter.py  scanner.py
database/: __init__.py  db_manager.py  db_manager_legacy.py  models_db.py
docs/: P0_IMPROVEMENTS_GUIDE.md  SISTEM_MUKEMMELLESTIRME_PLANI.md  SISTEM_MUKEMMELLESTIRME_PLANI_PART2.md
examples/: advanced_scan.py  basic_scan.py
integrations/: __init__.py  github_actions.py  gitlab_ci.py  jenkins.py
modules/accessibility/: __init__.py  accessibility_module.py
modules/api/: __init__.py  api_methods.py  api_module.py  graphql_tester.py  websocket_tester.py
modules/functional/: __init__.py  functional_module.py
modules/infrastructure/: __init__.py  infrastructure_module.py
modules/performance/: __init__.py  performance_module.py
modules/security/: __init__.py  security_module.py
modules/security/tests/: base_security_test.py  clickjacking.py  command_injection.py  cookies_security.py  cors.py  csrf.py  info_disclosure.py  open_redirect.py  path_traversal.py  security_headers.py  sql_injection.py  ssl_tls.py  ssrf.py  xss.py  xxe.py
modules/seo/: __init__.py  seo_module.py
modules/visual/: __init__.py  visual_module.py
payloads/: lfi.txt  sqli.txt  xss.txt
reporters/: __init__.py  excel_reporter.py  html_reporter.py  json_reporter.py  pdf_reporter.py  report_generator.py
reports_test/scan_20251022_183854/: report.html  report.json  summary.txt
tests/: __init__.py  conftest.py
tests/fixtures/: config_fixtures.py  scan_fixtures.py
tests/integration/: test_cache_integration.py  test_full_scan.py  test_report_generation.py  test_scan_workflow.py
tests/unit/: __init__.py  test_cache.py  test_cache_manager.py  test_caching.py  test_config.py  test_error_handler.py  test_exceptions.py  test_plugins.py  test_progress.py  test_progress_tracker.py  test_rate_limiter.py
tests/unit/core/: test_config_comprehensive.py  test_engine_comprehensive.py
tools/: profile_scan.py
utils/: __init__.py  cache.py  cache_manager.py  health.py  http_utils.py  metrics.py  payload_loader.py  performance.py  progress_tracker.py  sanitizers.py  secrets_manager.py  validators.py
